资产模块完全化提交
